--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
-        "express": "^4.17.0"
+        "express": "^4.17.0",
+        "mongoose": "^5.5.9",
+        "mongoose-unique-validator": "^2.0.3",
+        "underscore": "^1.9.1"
     }
 }
