--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jsonwebtoken": "^8.2.0",
         "mongoose": "^5.0.9",
         "mongoose-unique-validator": "^2.0.0",
+        "node-pre-gyp": "^0.13.0",
         "underscore": "^1.8.3"
     }
 }
